[tool.poetry]
name = "AoC2019"
version = "0.1.0"
description = "Solutions to Advent of Code 2019 problems"
authors = ["Dan Halligan"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
requests = "^2.31.0"
typer = "^0.9.0"
numpy = "^1.25.2"

[tool.poetry.dev-dependencies]
pytest = "^6"
black = "^22.10.0"
pre-commit = "^2.20.0"
flake8 = "^6.0.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aco2019 = "aco2019.cli:main"
