[tool.poetry]
name = "aoc2019"
version = "0.1.0"
description = "Solutions to Advent of Code 2019 problems"
authors = ["Dan Halligan <dan.halligan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.9.0"
requests = "^2.31.0"
numpy = "^1.25.2"
advent-of-code-ocr = "^1.0.0"
termcolor = "^2.3.0"

[tool.poetry.dev-dependencies]
pytest = "^6"
black = "^23.7.0"
pre-commit = "^3.3.3"
flake8 = "^6.1.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aoc2019 = "aoc2019.cli:main"